--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -8,6 +8,11 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.center-image {
+    display: block;
+    margin: auto;
+}
+
 .cardAyuda {
     border-color: var(--colorBlanco);
 }
