Se esta agregando un modulo, para que se pueda actualizar o agregar los premios y tambien la tabla de premioPrograma

--- a/public_html/assets/css/ReconoceloMantenimiento.css
+++ b/public_html/assets/css/ReconoceloMantenimiento.css
@@ -1,5 +1,4 @@
 @import 'globalStyles.css';
-
 .upperCase {
     text-transform: var(--textTransform);
 }
@@ -10,4 +9,10 @@
 
 #errorMessage {
     display: none;
+}
+
+.icon-load {
+    font-size: 60px;
+    position: relative;
+    left: 50%;
 }
