--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -125,8 +125,8 @@ body {
 }
 
 .scrollable-menu {
-    height: auto;
-    max-height: calc(var(--borderRadius)+496);
+    height: 450px;
+    max-height: calc(var(--borderRadius)+496px);
     overflow-x: hidden;
 }
 
