Se le agregaron nuevas cosas, a unas paginas que les faltaba algunas funciones

--- a/public_html/assets/css/ReconoceloMonitor.css
+++ b/public_html/assets/css/ReconoceloMonitor.css
@@ -172,6 +172,14 @@ a:hover {
     color: white !important;
 }
 
+#sesionMonitor {
+    display: none;
+}
+
+.color-sesionMonitor {
+    color: white !important;
+}
+
 
 /* Animaciones */
 
