Se agrego un hover al boton de eliminar

--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -182,6 +182,10 @@ a.borrarCarritoReconocelo {
     cursor: var(--cursor);
 }
 
+a.borrarCarritoReconocelo:hover {
+    color: var(--colorRojo);
+}
+
 .move-top {
     width: calc((var(--borderRadius)*8)+2);
     height: calc((var(--borderRadius)*8)+2);
