creando un nuevo modulo

--- a/public_html/assets/css/ReconoceloMonitor.css
+++ b/public_html/assets/css/ReconoceloMonitor.css
@@ -180,6 +180,14 @@ a:hover {
     color: white !important;
 }
 
+.borrarCatalogo {
+    cursor: pointer;
+}
+
+.borrarCatalogo:hover {
+    color: var(--colorRojo);
+}
+
 
 /* Animaciones */
 
