Agregando los querys de los base de datos

--- a/public_html/assets/css/ReconoceloMonitor.css
+++ b/public_html/assets/css/ReconoceloMonitor.css
@@ -185,7 +185,8 @@ a:hover {
 }
 
 .borrarCatalogo:hover {
-    color: var(--colorRojo);
+    color: var(--colorRojo) !important;
+    animation: apareciendo .5s ease-in-out;
 }
 
 
